--- a/package.json
+++ b/package.json
@@ -16,16 +16,24 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@tanstack/react-table": "^8.16.0",
+    "apexcharts": "^3.49.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "highcharts-react-official": "^3.2.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "^18",
+    "react-paginate": "^8.2.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
