--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # https://www.builder.io/c/docs/using-your-api-key
 NEXT_PUBLIC_BUILDER_API_KEY=871afa660560495da3a1d439d70ba5ce
+NEXT_PUBLIC_WEBSITE_HOST_URL=https://localhost:3000/
