feat: add overview tab and newsfeed

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 # https://www.builder.io/c/docs/using-your-api-key
 NEXT_PUBLIC_BUILDER_API_KEY=871afa660560495da3a1d439d70ba5ce
 NEXT_PUBLIC_WEBSITE_HOST_URL=https://localhost:3000/
+NEXT_PUBLIC_API_HOST_URL=https://coincapnews-api.vercel.app
+NEXT_PUBLIC_PER_PAGE=8
+NEXT_PUBLIC_TOTAL=10000
