--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18",
     "react-paginate": "^8.2.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
