feat: add exchanges and exchange detail page

--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@
 NEXT_PUBLIC_BUILDER_API_KEY=871afa660560495da3a1d439d70ba5ce
 NEXT_PUBLIC_WEBSITE_HOST_URL=https://localhost:3000/
 NEXT_PUBLIC_API_HOST_URL=https://coincapnews-api.vercel.app
-NEXT_PUBLIC_PER_PAGE=8
+NEXT_PUBLIC_API_HOST_NEWS_URL=https://metacoin.news/wp-json/wp/v3/posts
+NEXT_PUBLIC_PER_PAGE=10
+NEXT_PUBLIC_NEWS_PER_PAGE=8
 NEXT_PUBLIC_TOTAL=10000
