--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-paginate": "^8.2.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
