feat: fix socket

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-table": "^8.16.0",
     "apexcharts": "^3.49.0",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
