--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-apexcharts": "^1.4.1",
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "react-i18next": "^14.1.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
