--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
