--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next": "^23.11.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
