--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-cookie": "^7.1.4",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-i18next": "^14.1.1",
