--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "accept-language": "^3.0.18",
     "apexcharts": "^3.49.0",
     "clsx": "^2.1.1",
+    "escape-html": "^1.0.3",
     "framer-motion": "^11.1.7",
     "highcharts-react-official": "^3.2.1",
     "i18next": "^23.11.4",
@@ -40,6 +41,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "slate": "^0.103.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "swr": "^2.2.5",
@@ -47,6 +49,7 @@
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
+    "@types/escape-html": "^1.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
