--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.4",
     "slate": "^0.103.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
