--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/inter": "^5.0.18",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-table": "^8.16.0",
+    "@vercel/analytics": "^1.3.1",
     "accept-language": "^3.0.18",
     "apexcharts": "^3.49.0",
     "clsx": "^2.1.1",
